<resources>
    <string name="app_name">jeudepart</string>
    <string name="lblTitle"> Entrez une valeur entre 1 et 100:</string>
    <string name="btnCompare"> Comparer</string>
    <string name="strGreater"> Veuillez saisir une valeur supérieure.</string>
    <string name="strLower"> Veuillez saisir une valeur inférieure.</string>
    <string name="strCongratulations"> Toutes nos félicitations</string>
    <string name="email">Courriel</string>
    <string name="password">Mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="pays">Pays</string>
    <string name="strMessage"> Félicitations, vous gagnez aprés % d essais. Voulez-vous réessayer?</string>
    <string name="strYes">Oui</string>
    <string name="strNo">Non</string>
    <string name="authentification">Entrer vos identifiants</string>
    <string name="inscription">Inscription</string>
    <string name="connection">connexion</string>
    <string name="creation">creer un compte</string>
    <string name="creationNouveau">creer un nouveau compte</string>
    <string name="scores">Afficher les scores</string>
</resources>