<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationActivity">

  <TextView
      android:id="@+id/title2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:layout_marginBottom="32dp"
      android:text="@string/inscription"
      android:textAlignment="center"
      android:textSize="36sp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textPrenom"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/prenom" />

      <EditText
          android:id="@+id/prenomEdit"
          android:layout_width="wrap_content"
          android:layout_height="55dp"
          android:layout_weight="1"
          android:ems="10"
          android:importantForAutofill="no"
          android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textNom"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/nom" />

      <EditText
          android:id="@+id/nomEdit"
          android:layout_width="wrap_content"
          android:layout_height="55dp"
          android:layout_weight="1"
          android:ems="10"
          android:importantForAutofill="no"
          android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textEmail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/email" />

      <EditText
          android:id="@+id/emailEdit"
          android:layout_width="wrap_content"
          android:layout_height="60dp"
          android:layout_weight="1"
          android:ems="10"
          android:importantForAutofill="no"
          android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textPassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/password" />

      <EditText
          android:id="@+id/passwordEdit"
          android:layout_width="wrap_content"
          android:layout_height="55dp"
          android:layout_weight="1"
          android:ems="10"
          android:importantForAutofill="no"
          android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textPays"
          android:layout_width="77dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/pays" />

      <Spinner
          android:id="@+id/spinner"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="creationCompteOnClick"
        android:text="@string/creationNouveau" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>